--- a/src/lib/custom-form-control/custom-form-control.html
+++ b/src/lib/custom-form-control/custom-form-control.html
@@ -3,7 +3,7 @@
     <div class="c-error-container">
         <ng-container *ngIf="(hasError$ | async) as hasError">
             <ng-container *ngFor="let errorType of messagesKeys">
-                <div class="c-error" *ngIf="hasError[errorType]">
+                <div [style.color]="errorTextColor" class="c-error" *ngIf="hasError[errorType]">
                     {{errorType | fromObject:messages}}
                 </div>
             </ng-container>
